Update index.html: sanskrit updated again

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 <!-- Header -->
 <header id="home">
   <h1 data-en="Sudarshan Gautam" data-sa="सुदर्शन गौतम">Sudarshan Gautam</h1>
-  <p data-en="Researcher in Computational Linguistics at IIT (BHU)" data-sa="सङ्गणकभाषाविज्ञाने अनुसन्धाता, भारतीय प्रौद्योगिकी संस्थानम्, काशी हिन्दू विश्वविद्यालयः  ">Researcher in Computational Linguistics </p>
+  <p data-en="Researcher in Computational Linguistics at IIT (BHU)" data-sa="सङ्गणकभाषाविज्ञाने अनुसन्धाता, भारतीय प्रौद्योगिकी संस्थानम्, काशी हिन्दू विश्वविद्यालयः  ">Researcher in Computational Linguistics at IIT (BHU)</p>
 </header>
 
 <!-- About -->
@@ -203,7 +203,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
     <li>Nyāya Darśana</li>
     <li>Mīmāṁsā Darśana</li>
     <li>Śrauta Yajña</li>
-    <li>Indian Knowledge Tradition</li>
+    <li>Indian Knowledge System</li>
   </ul>
 </section>
 
@@ -217,7 +217,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Workshops -->
 <section id="workshops" class="workshops">
-  <h2 data-en="Workshops & Training" data-sa="कार्यशालाः">Workshops & Training</h2>
+  <h2 data-en="Workshops & Training" data-sa="कार्यशालाः एवं प्रशिक्षणानि">Workshops & Training</h2>
   <div class="tabs">
     <button class="tablinks" onclick="openTab(event,'WorkshopInternational')">International</button>
     <button class="tablinks" onclick="openTab(event,'WorkshopNational')">National</button>
