--- a/index.html
+++ b/index.html
@@ -327,17 +327,17 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
   <h2 data-en="Gallery" data-sa="दर्शनीयानि">Gallery</h2>
   <div class="gallery-grid">
     <div>
-      <img src="img1.jpg" alt="Random Image 1">
+      <img src="image1.jpg" alt="Random Image 1">
       <h3>Event 1</h3>
       <p>Description 1</p>
     </div>
     <div>
-      <img src="img2.jpg" alt="Random Image 2">
+      <img src="image2.jpg" alt="Random Image 2">
       <h3>Event 2</h3>
       <p>Description 2</p>
     </div>
     <div>
-      <img src="img3.jpg" alt="Random Image 3">
+      <img src="image3.jpg" alt="Random Image 3">
       <h3>Event 3</h3>
       <p>Description 3</p>
     </div>
