Update index.html: images

--- a/index.html
+++ b/index.html
@@ -328,13 +328,13 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
   <div class="gallery-grid">
     <div>
       <img src="image1.jpg" alt="Random Image 1">
-      <h3>Event 1</h3>
-      <p>Description 1</p>
+      <h3>Prayagaraj</h3>
+      <p>Paninian Grammar and Its Application, Three-Day International Seminar, Central Sanskrit University, Prayagraj, India (2023)</p>
     </div>
     <div>
       <img src="image2.jpg" alt="Random Image 2">
-      <h3>Event 2</h3>
-      <p>Description 2</p>
+      <h3>Varanasi</h3>
+      <p>त्रिदिवसीया अन्ताराष्ट्रीया शास्त्रार्थसभा, काशी हिन्दू विश्वविद्यालय, वाराणसी (2024)</p>
     </div>
     <div>
       <img src="image3.jpg" alt="Random Image 3">
