Update index.html: photos updated

--- a/index.html
+++ b/index.html
@@ -338,9 +338,24 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
     </div>
     <div>
       <img src="image3.jpg" alt="Random Image 3">
-      <h3>Event 3</h3>
-      <p>Description 3</p>
+      <h3>Prayagaraj 3</h3>
+      <p>Paninian Grammar and Its Application, Three-Day International Seminar, Central Sanskrit University, Prayagraj, India (2023) 3</p>
     </div>
+  </div>
+      <img src="IIIT1.jpg" alt="IIIT Image 1">
+      <h3> International Institute of Information Technology (IIIT), Hyderabad </h3> 
+      <p>Workshop on Developing Universal Semantic Representation (USR) following Indian Grammatical Tradition,IIIT, Hyderabad (2023)</p>
+  </div>
+  </div>
+      <img src="IIIT2.jpg" alt="IIIT Image 2">
+      <h3> International Institute of Information Technology (IIIT), Hyderabad </h3> 
+      <p>Workshop on Developing Universal Semantic Representation (USR) following Indian Grammatical Tradition,IIIT, Hyderabad (2023)</p>
+  </div>
+  </div>
+  <img src="prayag1.jpg" alt="prayag Image 1">
+      <h3> महाकुम्भ, प्रयागराज </h3> 
+      <p> शास्त्रार्थसभा, महाकुम्भ, प्रयागराज (2025)</p>
+  </div>
   </div>
 </section>
 
