--- a/index.html
+++ b/index.html
@@ -96,13 +96,82 @@ section h2 { text-align:center; font-size:2em; margin-bottom:40px; color:#1e3a8a
 .activities { background:#f5f5f5; padding:40px; }
 
 /* Gallery */
-.gallery { background:#f0f0ff; padding:40px; }
-.gallery-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
-.gallery-grid div { background:#fff; border-radius:15px; box-shadow:0 6px 15px rgba(0,0,0,0.1); padding:10px; text-align:center; }
-.gallery-grid img { width:100%; border-radius:15px; transition:0.3s; }
-.gallery-grid img:hover { transform:scale(1.05); }
-.gallery-grid h3 { margin-top:10px; color:#1e3a8a; }
-.gallery-grid p { font-size:0.9em; color:#555; }
+/* Gallery */
+.gallery { 
+  background:#f0f0ff; 
+  padding:40px; 
+}
+
+.gallery-grid { 
+  display:grid; 
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); 
+  gap:20px; 
+}
+
+.gallery-grid div { 
+  background:#fff; 
+  border-radius:15px; 
+  box-shadow:0 6px 15px rgba(0,0,0,0.1); 
+  padding:10px; 
+  text-align:center; 
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer; 
+  display: flex;               /* make card a flexbox */
+  flex-direction: column;      /* stack items vertically */
+  justify-content: space-between; 
+  min-height: 350px;           /* ensures equal height cards */
+}
+
+/* Card hover effect */
+.gallery-grid div:hover { 
+  transform: translateY(-8px); 
+  box-shadow:0 10px 20px rgba(0,0,0,0.2); 
+}
+
+/* Images */
+.gallery-grid img { 
+  width:100%; 
+  height:200px;          
+  object-fit: cover;     
+  border-radius:15px; 
+  transition: transform 0.3s ease; 
+  flex-shrink: 0;         /* image doesn’t shrink */
+}
+
+/* Image zoom on hover */
+.gallery-grid img:hover { 
+  transform:scale(1.05); 
+}
+
+.gallery-grid h3 { 
+  margin-top:10px; 
+  color:#1e3a8a; 
+  flex-grow: 0;
+}
+
+.gallery-grid p { 
+  font-size:0.9em; 
+  color:#555; 
+  margin-top: 5px; 
+  flex-grow: 1;            /* text fills remaining space */
+  display: flex; 
+  align-items: flex-start; /* keeps text aligned nicely */
+}
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const grid = document.querySelector(".gallery-grid");
+    const cards = Array.from(grid.children);
+
+    cards.sort((a, b) => {
+      const titleA = a.querySelector("h3").innerText.toLowerCase();
+      const titleB = b.querySelector("h3").innerText.toLowerCase();
+      return titleA.localeCompare(titleB); // A–Z sorting
+    });
+
+    // Re-append sorted cards
+    cards.forEach(card => grid.appendChild(card));
+  });
+</script>
 
 /* Contact */
 .contact { background:#fff7ed; text-align:center; padding:40px; }
