--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <style>
 /* Base Reset */
 * { margin:0; padding:0; box-sizing:border-box; }
-html { scroll-behavior: smooth; }
+html { 
+  scroll-behavior: smooth; 
+  scroll-padding-top: 90px; /* fixes sticky nav overlapping headings */
+}
 body { font-family:'Roboto', sans-serif; background:#f5f7fa; color:#333; }
 
 /* Top Bar */
@@ -35,7 +38,7 @@ nav { position:sticky; top:35px; background:#1e3a8a; padding:10px 20px; z-index:
 .hamburger div { width:25px; height:3px; background:#fff; border-radius:2px; }
 
 /* Sections */
-section { padding:60px 20px; max-width:1100px; margin:0 auto; border-radius:15px; margin-bottom:50px; box-shadow:0 8px 20px rgba(0,0,0,0.05); opacity:0; transform:translateY(50px); transition:0.6s; }
+section { padding:60px 20px; max-width:1100px; margin:0 auto; border-radius:15px; margin-bottom:50px; box-shadow:0 8px 20px rgba(0,0,0,0.05); opacity:0; transform:translateY(50px); transition:0.6s; scroll-margin-top:90px; } /* added scroll-margin-top for extra safety */
 section h2 { text-align:center; font-size:2em; margin-bottom:40px; color:#1e3a8a; }
 .show { opacity:1; transform:translateY(0); }
 
@@ -96,82 +99,41 @@ section h2 { text-align:center; font-size:2em; margin-bottom:40px; color:#1e3a8a
 .activities { background:#f5f5f5; padding:40px; }
 
 /* Gallery */
-/* Gallery */
-.gallery { 
-  background:#f0f0ff; 
-  padding:40px; 
-}
-
-.gallery-grid { 
-  display:grid; 
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); 
-  gap:20px; 
-}
-
+.gallery { background:#f0f0ff; padding:40px; }
+.gallery-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
 .gallery-grid div { 
-  background:#fff; 
-  border-radius:15px; 
-  box-shadow:0 6px 15px rgba(0,0,0,0.1); 
-  padding:10px; 
-  text-align:center; 
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  cursor: pointer; 
-  display: flex;               /* make card a flexbox */
-  flex-direction: column;      /* stack items vertically */
-  justify-content: space-between; 
-  min-height: 350px;           /* ensures equal height cards */
+  background:#fff; border-radius:15px; box-shadow:0 6px 15px rgba(0,0,0,0.1); 
+  padding:10px; text-align:center; transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor:pointer; display:flex; flex-direction:column; justify-content:space-between; min-height:350px;
 }
+.gallery-grid div:hover { transform: translateY(-8px); box-shadow:0 10px 20px rgba(0,0,0,0.2); }
+.gallery-grid img { width:100%; height:200px; object-fit: cover; border-radius:15px; transition: transform 0.3s ease; flex-shrink:0; }
+.gallery-grid img:hover { transform:scale(1.05); }
+.gallery-grid h3 { margin-top:10px; color:#1e3a8a; flex-grow:0; }
+.gallery-grid p { font-size:0.9em; color:#555; margin-top:5px; flex-grow:1; display:flex; align-items:flex-start; }
 
-/* Card hover effect */
-.gallery-grid div:hover { 
-  transform: translateY(-8px); 
-  box-shadow:0 10px 20px rgba(0,0,0,0.2); 
+/* --- Lightbox CSS --- */
+.lightbox-overlay {
+  position: fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background: rgba(0,0,0,0.8);
+  display:none;
+  justify-content:center;
+  align-items:center;
+  z-index:9999;
 }
-
-/* Images */
-.gallery-grid img { 
-  width:100%; 
-  height:200px;          
-  object-fit: cover;     
-  border-radius:15px; 
-  transition: transform 0.3s ease; 
-  flex-shrink: 0;         /* image doesn’t shrink */
+.lightbox-overlay img {
+  max-width:90%;
+  max-height:90%;
+  border-radius:15px;
+  box-shadow:0 10px 25px rgba(0,0,0,0.5);
+  animation: fadeIn 0.3s ease;
 }
-
-/* Image zoom on hover */
-.gallery-grid img:hover { 
-  transform:scale(1.05); 
+@keyframes fadeIn {
+  from {opacity:0; transform:scale(0.9);}
+  to {opacity:1; transform:scale(1);}
 }
-
-.gallery-grid h3 { 
-  margin-top:10px; 
-  color:#1e3a8a; 
-  flex-grow: 0;
-}
-
-.gallery-grid p { 
-  font-size:0.9em; 
-  color:#555; 
-  margin-top: 5px; 
-  flex-grow: 1;            /* text fills remaining space */
-  display: flex; 
-  align-items: flex-start; /* keeps text aligned nicely */
-}
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const grid = document.querySelector(".gallery-grid");
-    const cards = Array.from(grid.children);
-
-    cards.sort((a, b) => {
-      const titleA = a.querySelector("h3").innerText.toLowerCase();
-      const titleB = b.querySelector("h3").innerText.toLowerCase();
-      return titleA.localeCompare(titleB); // A–Z sorting
-    });
-
-    // Re-append sorted cards
-    cards.forEach(card => grid.appendChild(card));
-  });
-</script>
 
 /* Contact */
 .contact { background:#fff7ed; text-align:center; padding:40px; }
@@ -190,6 +152,8 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
   .nav-links.show { display:flex; }
   .hamburger { display:flex; }
 }
+</style>
+
  /* --- Lightbox CSS --- */
 .lightbox-overlay {
   position: fixed;
@@ -212,7 +176,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
   from {opacity:0; transform: scale(0.9);}
   to {opacity:1; transform: scale(1);}
 }
- 
+
 </style>
 </head>
 <body>
