Update index.html: updated the design

--- a/index.html
+++ b/index.html
@@ -154,28 +154,6 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 }
 </style>
 
- /* --- Lightbox CSS --- */
-.lightbox-overlay {
-  position: fixed;
-  top:0; left:0;
-  width:100%; height:100%;
-  background: rgba(0,0,0,0.8);
-  display:none;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-}
-.lightbox-overlay img {
-  max-width: 90%;
-  max-height: 90%;
-  border-radius: 15px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.5);
-  animation: fadeIn 0.3s ease;
-}
-@keyframes fadeIn {
-  from {opacity:0; transform: scale(0.9);}
-  to {opacity:1; transform: scale(1);}
-}
 
 </style>
 </head>
@@ -213,7 +191,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Header -->
 <header id="home">
-  <h1 data-en="Sudarshan Gautam" data-sa="सुदर्शन गौतम">Sudarshan Gautam</h1>
+  <h1 data-en="Sudarshan Gautam" data-sa="सुदर्शन~गौतमः">Sudarshan Gautam</h1>
   <p data-en="Researcher in Computational Linguistics at IIT (BHU)" data-sa="सङ्गणकभाषाविज्ञाने अनुसन्धाता, भारतीय प्रौद्योगिकी संस्थानम्, काशी हिन्दू विश्वविद्यालयः  ">Researcher in Computational Linguistics at IIT (BHU)</p>
 </header>
 
@@ -321,12 +299,13 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
   </div>
   <div id="ShastrarthaInternational" class="tabcontent">
     <ul>
-      <li>International Śāstrārtha example 1 – 2023</li>
+      <li> "वैयाकरणनये निपातार्थविचारः" (व्याकरणम्)- A three Day International Seminar on Pāṇinian Grammar & Its Application, prayagaraj – 2023</li>
     </ul>
   </div>
   <div id="ShastrarthaNational" class="tabcontent">
     <ul>
-      <li>National Śāstrārtha example 1 – 2023</li>
+      <li>"इन्द्रियकामाधिकरणम्" (मीमांसा)-  अखिलभारतीय शास्त्रार्थसभा, काशी हिन्दू विश्वविद्यालय – 2023</li>
+      <li>"उद्भिदधिकरणम्" (मीमांसा)-  अखिलभारतीय धर्मसम्राट् करपात्र-शास्त्रार्थसभा, धर्मसङ्घ, वाराणसी - 2025</li>
     </ul>
   </div>
 </section>
@@ -343,8 +322,8 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 <section id="lectures" class="lectures">
   <h2 data-en="Lectures" data-sa="व्याख्यानानि">Lectures</h2>
   <ul>
-    <li>Lecture Example 1 – 2023</li>
-    <li>Lecture Example 2 – 2024</li>
+    <li>Lecture – 2023</li>
+    <li>Lecture  – 2024</li>
   </ul>
 </section>
 
@@ -353,19 +332,19 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
   <h2 data-en="Publications" data-sa="प्रकाशनानि">Publications</h2>
   <h3>Scopus/Web of Science</h3>
   <ul>
-    <li>Publication Example 1 <a href="#">View</a></li>
+    <li>Publication  <a href="#">View</a></li>
   </ul>
   <h3>UGC Care List</h3>
   <ul>
-    <li>Publication Example 2 <a href="#">View</a></li>
+    <li>Publication <a href="#">View</a></li>
   </ul>
   <h3>Peer-reviewed</h3>
   <ul>
-    <li>Publication Example 3 <a href="#">View</a></li>
+    <li>Publication <a href="#">View</a></li>
   </ul>
-  <h3>Future Publications</h3>
+  <h3>Upcoming Publications</h3>
   <ul>
-    <li>Upcoming Publication Example 1</li>
+    <li> Under process Publication </li>
   </ul>
 </section>
 
@@ -373,8 +352,8 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 <section id="activities" class="activities">
   <h2 data-en="Other Activities" data-sa="अन्यानि">Other Activities</h2>
   <ul>
-    <li>Additional activity 1</li>
-    <li>Additional activity 2</li>
+    <li>यथाकालं श्रौतप्रयोगः</li>
+    <li> यत्किञ्चित् </li>
   </ul>
 </section>
 
